tests/cases/errors/sema/assign_to_non_lvalue.hc
//@ error: is not an lvalue
U0 Main()
{
  Main = 1;
}
